# templates-fullstack

./: .dockerignore  .gitignore  LICENSE  README.md  README.rst
.github/workflows/: test.yml
docker/: DockerfileBackend  DockerfileFrontend  docker-compose.dev.yaml  docker-compose.yaml  docker.example.env  nginx.conf
templates-backend/: .gitignore  pyproject.toml
templates-backend/docs/: db.rst  fastapi.rst  generalities.rst
templates-backend/src/: alembic.ini  main.py  settings.example.ini
templates-backend/src/templates/: backend.py  settings.py
templates-backend/src/templates/alembic/: env.py
templates-backend/src/templates/database/: a.py  database.py
templates-backend/src/templates/graphql/: schema.py
templates-backend/src/templates/graphql/mutations/: a.py
templates-backend/src/templates/graphql/queries/: a.py
templates-backend/src/templates/graphql/types/: generated.py  generic.py
templates-backend/src/templates/utils/: dataclasses.py  helpers.py  repeat_every.py
templates-backend/src/tests/: conftest.py  test_fast_api.py  test_graphql.py  test_rest_api.py
templates-frontend/: angular.json  package-lock.json  package.json
templates-frontend/src/: index.html
templates-frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
templates-frontend/src/app/components/index/: index.component.html  index.component.ts
templates-frontend/src/app/models/: fragments.ts  models.ts  queries.ts
templates-frontend/src/app/services/: api.service.ts
