[project]
name = "templates-backend"
description = "Backend of the website Template."

version = "1.1.0"

license = "CC-BY-NC-SA-4.0"
authors = [
    { name = "Vincent 'Philaeux' LAMOTTE", email = "vinc.lamotte@gmail.com" }
]

requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[all]>=0.117.1",
    "psycopg[binary]>=3.2.10",
    "sqlalchemy>=2.0.43",
    "strawberry-graphql>=0.282.0",
    "strawberry-sqlalchemy-mapper>=0.7.0",
    "strawchemy>=0.19.0",
    "uvicorn>=0.37.0",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "apscheduler>=3.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.0.0",
    "enum-tools[sphinx]>=0.13.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0"
]
