[project]
name = "templates-backend"
description = "Backend of the website Template."

version = "1.1.0"

license = "CC-BY-NC-SA-4.0"
authors = [
    { name = "Vincent 'Philaeux' LAMOTTE", email = "vinc.lamotte@gmail.com" }
]

requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[all]>=0.121.1",
    "psycopg[binary]>=3.2.12",
    "sqlalchemy>=2.0.44",
    "strawberry-graphql>=0.285.0",
    "strawberry-sqlalchemy-mapper>=0.7.0",
    "strawchemy>=0.19.0",
    "uvicorn>=0.38.0",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "apscheduler>=3.11.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.0.0",
    "enum-tools[sphinx]>=0.13.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0"
]
